# berzerk-print-station

./: .env.example  .gitignore  README.md  RESUME.md  package.json
.github/workflows/: release.yml
migrations/: 20260521_rfid_epc_inventory.sql  20260527_descartar_lote.sql  20260527_print_jobs_flags.sql
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: itag_client.rs  itag_iprint.rs  lib.rs  main.rs  oauth_loopback.rs  oauth_loopback_response.html  usb_devices.rs
src/components/: AmbientBackground.tsx  BackButton.tsx  BatchBrowser.tsx  BatchCard.tsx  BerzerkLogo.tsx  HomeMenu.tsx  JobCard.tsx  Login.tsx  NotaFiscalPlaceholder.tsx  PieceTrace.tsx  PrintConfirmModal.tsx  SettingsPlaceholder.tsx  UpdateBanner.tsx  UpdateChecker.tsx
src/lib/: auth.ts  devices.ts  ean13.ts  grade.ts  labelFormatter.ts  rfid.ts  settings.ts  station.ts  supabase.ts  theme.ts  updater.ts  usb.ts
src/lib/itag/: iprint.ts  printJob.ts
src/services/: batches.ts  ean13Lookup.ts  iprintConfig.ts  printJobs.ts
tools/itag-mock/: README.md  server.ts
