[package]
name = "berzerk-rfid"
version = "0.1.10"
description = "Berzerk RFID — estação industrial de etiquetagem e expedição"
authors = ["Berzerk Tech"]
edition = "2021"

[lib]
# Sufixo `_lib` é workaround obrigatório no Windows pra lib name não
# bater com bin name (cargo issue #8519).
name = "berzerk_rfid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tiny_http = "0.12"
# native-tls (não rustls): no Windows usa SChannel — mesmo trust store do
# Chrome — então certs aceitos no browser passam aqui também. Rustls é
# mais estrito e rejeitava certs do iTAG (berzerk.itagalert.com.br).
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
urlencoding = "2"

